<resources>
    <string name="app_name">Chat Application</string>
    <string name="LoginUser">Username</string>
    <string name="LoginPass">Password</string>
    <string name="Login">Login</string>
    <string name="Register">Register</string>
    <string name="Register_firstname">First name</string>
    <string name="Register_lastname">Last name</string>
    <string-array name="Register_genderarray">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="Register_gender">Gender</string>
    <string name="Register_email">johndoe@gmail.com</string>
    <string name="Register_notifications">Accept notifications</string>
    <string name="Register_birthdate">Birth date</string>
    <string name="Contact_friend">My friend</string>
    <string name="Contact_logout">Logout</string>
    <string name="Message_message">message text</string>
    <string name="Message_send">Send</string>
    <string name="Names_nikola">Nikola</string>
    <string name="Names_marko">Marko</string>
    <string name="Names_dusan">Dusan</string>
    <string name="Names_stevan">Stevan</string>
    <string name="Names_bane">Bane</string>
    <string name="Names_dejan">Dejan</string>
    <string name="Contact_label">My chat list</string>
    <string name="Misc_user">User</string>
    <string name="Misc_other">Other</string>
    <string name="Misc_dummy">Dummy string</string>
    <string name="ContactDb_dbname">contacts.db</string>
    <string name="Contact_refresh">Refresh</string>
</resources>
