<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="nikola.malencic.chatapplication.MainActivity"
    android:orientation="vertical">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_username"
        android:layout_gravity="center"
        android:layout_marginTop="50pt"
        android:hint="@string/LoginUser"/>

    <EditText
        android:inputType="textPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_password"
        android:layout_gravity="center"
        android:hint="@string/LoginPass"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="50pt"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/login_loginbutton"
            android:layout_marginRight="25pt"
            android:text="@string/Login"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/login_registerbutton"
            android:layout_marginLeft="25pt"
            android:text="@string/Register"
            />
    </LinearLayout>

</LinearLayout>
