<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="nikola.malencic.chatapplication.MessageActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/message_label"
            android:layout_weight="1"
            android:gravity="left|center"
            android:textSize="20dp"
            android:paddingLeft="10dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Contact_logout"
        android:id="@+id/message_logout"
        android:layout_gravity="end"/>

    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/message_list"
        android:layout_weight="1"></ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:hint="@string/Message_message"
            android:layout_marginLeft="5pt"
            android:id="@+id/message_messagetext"
            android:layout_weight="0.5"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_weight="0.5"
            android:layout_marginRight="20pt"
            android:layout_marginLeft="30pt"
            android:layout_height="match_parent"
            android:id="@+id/message_sendbutton"
            android:text="@string/Message_send"/>
    </LinearLayout>

</LinearLayout>
